@@ -2537,10 +2537,9 @@ void ONMainWindow::slotSelectedFromList ( SessionButton* session )
 
 
 
-        sessIcon = wrap_legacy_resources (st->setting()->value (
-                                                                sid+"/icon",
-                                                                (QVariant) ":/img/icons/128x128/x2gosession.png"
-                                                               ).toString ());
+        sessIcon = wrap_legacy_resource_URIs (st->setting()->value (sid+"/icon",
+                                                                    (QVariant) ":/img/icons/128x128/x2gosession.png"
+                                                                   ).toString ());
         sessIcon = expandHome(sessIcon);
 
         command=st->setting()->value (
