@@ -22,7 +22,7 @@
 #include <QString>
 
 QString expandHome( QString path );
-QString fixup_resources (const QString res_path);
-QString wrap_legacy_resources (const QString res_path);
+QString fixup_resource_URIs (const QString res_path);
+QString wrap_legacy_resource_URIs (const QString res_path);
 
 #endif
